Fix issue where loading spinner was overflowing page

--- a/src/components/MapContainer.css
+++ b/src/components/MapContainer.css
@@ -8,6 +8,7 @@
   z-index: 500;
   width: 100%;
   height: 100%;
+  top: 0;
   display: flex;
   justify-content: center;
   align-items: center;
